4702b2233c Upgrade to version release-v0.24.2 (#384)
5fa81e9962 [ONHS-11166] incr query optimization (#383)
bc9d7f58c1 Revert "[ONHS-11088] performance optimizations and minor tweaks" (#382)
b1bd1f29ed As queryInfo was not updated inplace, updating it in s3/gcs sources. (#380)
bafaf994c2 Cherry-pick-6735  (#381)
12456cb3f2 [ONHS-10998] Fix delay in GcsEventsSource (#379)

---[2023-09-03 11:49:59] [release-v0.24.4] ---
4e73bc56c8e [ONHS-11207] update logic for initializing HMS uri in hadoop configuration (#388)
727c918aae1 Upgrade to version release-v0.24.3 (#386)

---[2023-09-05 17:43:14] [release-v0.25.0] upgrade release tag for hudi-internal release-v0.25.0---
8ea6bb03b03 reduce is_empty rdd calls (#390)
3d64be574e0 [ONHS-10270]add support for max bytes per partition (#360)
c77c6b14685 [ONHS-11207] Upgrade to version release-v0.24.4 (#389)

---[2023-09-08 16:00:46] [release-v0.25.1] ---
8ad92a28dd3 [ENG-2090] add ability to replace tables created with old approach to allow smooth rollout (#397)
f33eaece72a [ENG-2021] Handle empty commits in addFieldIds (#396)
17d4c2eebd6 [ENG-1352] Bigquery cherry-picks for manifest support (#394)
119fbf081bb [ONHS-11088] performance optimizations and minor tweaks (#392)
1b400f2211e [ONHS-11269] fix compile issue (#393)
b36c179ea07 Upgrade to version release-v0.25.0 (#391)

---[2023-09-09 23:10:22] [release-v0.25.2] ---
c183c08863b [ENG-1335] remove BigQuery Sync validation call for CoW (#399)
5db162c399a [ENG-1320] Upgrade to version release-v0.25.1 (#398)

---[2023-09-11 10:21:12] [release-v0.25.3] ---
e7b8d13af46 [ENG-1352] Bug fixes and sanity items from testing new manifest sync (#401)
d101819c98f [ENG-1335] Upgrade to version release-v0.25.2 (#400)

---[2023-09-12 21:49:07] [release-v0.25.4] ---
ad8e0dbf58f [ENG-1320] add location to BQ job definition and add partition filter required support (#403)
703e9dcfd34 [ENG-1352] Upgrade to version release-v0.25.3 (#402)